Fixed check issues